Stripe Checkout integration

--- a/.env.example
+++ b/.env.example
@@ -64,5 +64,7 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
+APP_CURRENCY=EUR
 STRIPE_SECRET_KEY=
 STRIPE_PUBLISHABLE_KEY=
+STRIPE_WEBHOOK_SECRET=
