--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "filament/filament": "^4.1",
         "filament/spatie-laravel-media-library-plugin": "^4.1",
         "inertiajs/inertia-laravel": "^2.0",
+        "kayzer24/laravel-stripe-connect": "^0.0.1",
         "laravel/fortify": "^1.30",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
